--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Pokemon Api</title>
 </head>
-<body>
-    <div class = "container-sm">
+    <br>
+    <div class = "container-sm" width="50px">
         <h1 id="pokemon-name" class="text-center btn-info">Insert pokemon Name here.</h1>
         <h2 id="pokemon-type" class="text-center btn-warning">Insert pokemon type here </h2>
+        <h4 id="pokedexNo"></h4>
     </div>
     <div class="text-center">
         <img id="pokemonPic" 
@@ -20,8 +21,19 @@
         class="btn-outline-info"
         />
     </div>
+    <div id="infos" class="container-sm btn-info">
+        <h4 id="pokeHp">Pokemon Stats</h4>
+        <h4 id="pokeAttack">Pokemon Stats</h4>
+        <h4 id="pokeDefense">Pokemon Stats</h4>
+        <h4 id="pokeSpecial-attack">Pokemon Stats</h4>
+        <h4 id="pokeSpecial-defense">Pokemon Stats</h4>
+        <h4 id="pokeSpeed">Pokemon Stats</h4>
+        <h4 id="pokeHeight">Pokemon height</h4>
+        <h4 id="pokeWeight">Pokemon Weight</h4>
+    </div>
+        
     <div class="btn-lg text-center">
-    <button id="button" class="btn-primary"  onclick="getPokemon()" >Get New Pokemon</button></div>
+    <button id="button" class="btn-primary">Get New Pokemon</button></div>
 <script src="main.js"> </script>
 </body>
 </html>
