--- a/index.html
+++ b/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href = "main.css"></link>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="main.css"></link>
     <title>Pokemon Api</title>
 </head>
     <br>
-    <div class = "container-sm" width="50px">
-        <h1 id="pokemon-name" class="text-center btn-info">Insert pokemon Name here.</h1>
-        <h2 id="pokemon-type" class="text-center btn-warning">Insert pokemon type here </h2>
-        <h4 id="pokedexNo"></h4>
+    <div id="header">
+        <h1 id="pokeName">Insert pokemon Name here.</h1>
+        <h2 id="pokeType">Insert pokemon type here </h2>
+        <h3 id="pokedexNo"></h3>
     </div>
-    <div class="text-center">
+<div id="stats-pic-section">
+    <div >
         <img id="pokemonPic" 
         width="500"
         height="500"
-        class="btn-outline-info"
         />
     </div>
-    <div id="infos" class="container-sm btn-info">
+    <div id="pokeInfo">
         <h4 id="pokeHp">Pokemon Stats</h4>
         <h4 id="pokeAttack">Pokemon Stats</h4>
         <h4 id="pokeDefense">Pokemon Stats</h4>
@@ -31,7 +31,7 @@
         <h4 id="pokeHeight">Pokemon height</h4>
         <h4 id="pokeWeight">Pokemon Weight</h4>
     </div>
-        
+</div>
     <div class="btn-lg text-center">
     <button id="button" class="btn-primary">Get New Pokemon</button></div>
 <script src="main.js"> </script>
