finishing off styling

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <div id="stats-pic-section">
     <div >
         <img id="pokemonPic" 
-        width="500"
-        height="500"
+        width="400"
+        height="400"
         />
     </div>
     <div id="pokeInfo">
@@ -33,7 +33,7 @@
     </div>
 </div>
     <div class="btn-lg text-center">
-    <button id="button" class="btn-primary">Get New Pokemon</button></div>
+    <button id="button" class="btn-warning">Get New Pokemon</button></div>
 <script src="main.js"> </script>
 </body>
 </html>
